--- a/app/tabs/balance/balance.component.scss
+++ b/app/tabs/balance/balance.component.scss
@@ -1,3 +1,16 @@
 .test {
-    
+
+}
+
+.balance-container {
+    background-color: #EAEAEA;
+    padding: 10px;
+    margin: 50px;
+    text-align:center;
+}
+
+.actions-ccontainer {
+    margin-top: 0px;
+    margin: 50px;
+    text-align:center;
 }
