--- a/app/tabs/balance/balance.component.scss
+++ b/app/tabs/balance/balance.component.scss
@@ -5,12 +5,17 @@
 .balance-container {
     background-color: #EAEAEA;
     padding: 10px;
-    margin: 50px;
+    margin: 200px;
     text-align:center;
 }
 
 .actions-ccontainer {
     margin-top: 0px;
-    margin: 50px;
+    margin: 200px;
     text-align:center;
+}
+
+.action-button {
+    width: 70%;
+    height: 200px;
 }
