--- a/app/tabs/tabs.component.html
+++ b/app/tabs/tabs.component.html
@@ -13,13 +13,13 @@ http://docs.nativescript.org/angular/code-samples/ui/tab-view
     To add a new TabView item, add a new layout component with a tabItem Angular directive.
     Assign the tabItem directive an object that declares the tab item button's title and icon source.
     -->
-    <StackLayout *tabItem="{title: 'Home', iconSource: getIconSource('home')}">
+    <StackLayout *tabItem="{title: 'Balance', iconSource: getIconSource('coins')}">
         <balance></balance>
     </StackLayout>
-    <StackLayout *tabItem="{title: 'Account', iconSource: getIconSource('folder')}">
+    <StackLayout *tabItem="{title: 'Accounts', iconSource: getIconSource('accounts')}">
 
     </StackLayout>
-    <StackLayout *tabItem="{title: 'Transactions', iconSource: getIconSource('search')}">
+    <StackLayout *tabItem="{title: 'Transactions', iconSource: getIconSource('transactions')}">
 
     </StackLayout>
     <StackLayout *tabItem="{title: 'Settings', iconSource: getIconSource('settings')}">
