--- a/app/tabs/tabs.component.html
+++ b/app/tabs/tabs.component.html
@@ -16,13 +16,13 @@ http://docs.nativescript.org/angular/code-samples/ui/tab-view
     <StackLayout *tabItem="{title: 'Balance', iconSource: getIconSource('coins')}">
         <balance></balance>
     </StackLayout>
-    <StackLayout *tabItem="{title: 'Accounts', iconSource: getIconSource('accounts')}">
-
-    </StackLayout>
     <StackLayout *tabItem="{title: 'Transactions', iconSource: getIconSource('transactions')}">
 
     </StackLayout>
-    <StackLayout *tabItem="{title: 'Settings', iconSource: getIconSource('settings')}">
+    <StackLayout *tabItem="{title: 'Accounts', iconSource: getIconSource('accounts')}">
+
+    </StackLayout>
+    <StackLayout *tabItem="{title: 'Settings', iconSource: getIconSource('gears')}">
 
     </StackLayout>
 </TabView>
