--- a/app/app.scss
+++ b/app/app.scss
@@ -28,6 +28,7 @@
     padding: 20px;
 
     .info-container {
+        border-radius: 20px;
         background-color: #EAEAEA;
         padding: 10px;
         text-align:center;
