walletservice outline, market service adjustments, models

--- a/app/tabs/tabs.component.html
+++ b/app/tabs/tabs.component.html
@@ -17,7 +17,7 @@ http://docs.nativescript.org/angular/code-samples/ui/tab-view
         <balance></balance>
     </StackLayout>
     <StackLayout *tabItem="{title: 'Transactions', iconSource: getIconSource('transactions')}">
-
+        <transactions></transactions>
     </StackLayout>
     <StackLayout *tabItem="{title: 'Accounts', iconSource: getIconSource('accounts')}">
 
