--- a/app/app.scss
+++ b/app/app.scss
@@ -32,6 +32,7 @@
         background-color: #EAEAEA;
         padding: 10px;
         text-align:center;
+        vertical-align: middle;
     }
 
     .body-container {
