balance component layout, qrcode

--- a/app/tabs/balance/balance.component.scss
+++ b/app/tabs/balance/balance.component.scss
@@ -1,18 +1,18 @@
-.test {
-
-}
 
 .balance-container {
     background-color: #EAEAEA;
     padding: 10px;
-    margin: 200px;
-    text-align:center;
+    margin-top: 100px;
+    text-align: center;
+    border-radius: 20px;
+    width: 80%;
 }
 
-.actions-ccontainer {
-    margin-top: 0px;
-    margin: 200px;
-    text-align:center;
+.qrcode {
+    margin: 25px;
+    width: 400px;
+    height: 400px;
+    border-radius: 20px;
 }
 
 .action-button {
