--- a/app/tabs/balance/balance.component.html
+++ b/app/tabs/balance/balance.component.html
@@ -1,18 +1,20 @@
-
 <StackLayout orientation="vertical">
-    <StackLayout class="balance-container" orientation="vertical">
-        <Image src="~/images/apple.jpg"></Image>
-        <StackLayout orientation="vertical">
-            <Label class="" [text]="address"></Label>
-            <Label class="" [text]="balance"></Label>
-            <Label class="" [text]="balanceBTC"></Label>
-            <Label class="" [text]="balanceCur"></Label>
-        </StackLayout>
+    <StackLayout class="balance-container m-b-30" orientation="vertical">
+            <Image class="qrcode" [src]="qrcode"></Image>
+            <StackLayout class="hr-light"></StackLayout>
+            <Label class="font-weight-bold font-italic p-t-10 p-b-10" [text]="address"></Label>
+            <StackLayout class="hr-light"></StackLayout>
+            <Label class="font-weight-bold font-italic p-t-10 p-b-10" [text]="balance"></Label>
+            <StackLayout class="hr-light"></StackLayout>
+            <GridLayout class="m-x-auto p-t-10 p-b-10" columns="*,auto,*" rows="auto">
+                <Label col="0" class="font-weight-bold font-italic" [text]="balanceBTC"></Label>
+                <Label col="1" class="fa p-t-2" text="&#xf0ec;"></Label>
+                <Label col="2" class="font-weight-bold font-italic" [text]="balanceCur"></Label>
+            </GridLayout>
     </StackLayout>
 
     <StackLayout class="actions-container" orientation="vertical">
         <Button class="btn btn-primary btn-active action-button" text="Send" (tap)="onTapSend($event)"></Button>
         <Button class="btn btn-primary btn-active action-button" text="Receive" (tap)="onTapReceive($event)"></Button>
-        <Button class="btn btn-primary btn-active action-button" text="Cold Storage" (tap)="onTapStorage($event)"></Button>
     </StackLayout>
 </StackLayout>
