Shared Module for shared services, guard changes, accounts component

--- a/app/tabs/balance/balance.component.html
+++ b/app/tabs/balance/balance.component.html
@@ -14,7 +14,8 @@
     </StackLayout>
 
     <StackLayout class="actions-container" orientation="vertical">
-        <Button class="btn btn-primary btn-active action-button" text="Send" [nsRouterLink]="['balance/send']"></Button>
-        <Button class="btn btn-primary btn-active action-button" text="Receive" (tap)="onTapReceive($event)"></Button>
+        <Button *ngIf="wallet?.type == 'active'" class="btn btn-primary btn-active action-button" text="Send" [nsRouterLink]="['balance/send']"></Button>
+        <!--<Button class="btn btn-primary btn-active action-button" text="Receive" (tap)="onTapReceive($event)"></Button>-->
+        <Button *ngIf="wallet?.type == 'offline'" class="btn btn-primary btn-active action-button" text="Activate" [nsRouterLink]="['accounts/activate']"></Button>
     </StackLayout>
 </StackLayout>
