transactions component, styling changes

--- a/app/_app-variables.scss
+++ b/app/_app-variables.scss
@@ -1,6 +1,6 @@
 // Colors
-$background-dark: #F8F8F8 !default;
-$background-light: #FFFFFF !default;
+$background-dark: #003366 !default;
+$background-light: #fefcf8 !default;
 
 $blue-dark: #022734 !default;
 $blue-light: #02556E !default;
