--- a/app/tabs/tabs.component.html
+++ b/app/tabs/tabs.component.html
@@ -8,7 +8,7 @@
             <balance></balance>
         </StackLayout>
         <StackLayout *tabItem="{title: 'Transactions', iconSource: getIconSource('transactions')}">
-            <!--<transactions></transactions>-->
+            <transactions></transactions>
         </StackLayout>
         <StackLayout *tabItem="{title: 'Accounts', iconSource: getIconSource('accounts')}">
             <accounts></accounts>
