--- a/app/app.scss
+++ b/app/app.scss
@@ -16,8 +16,13 @@
 // Import the platform specific ruleset.
 @import url('~/platform.css');
 
+
+
 // Place any CSS rules you want to apply on both iOS and Android here.
 // This is where the vast majority of your CSS code goes.
+Page {
+    background-color: $background-dark;
+}
 // Font icon class
 .fa {
    font-family: "FontAwesome";
