--- a/app/tabs/balance/balance.component.scss
+++ b/app/tabs/balance/balance.component.scss
@@ -1,6 +1,7 @@
+@import '../app-variables';
 
 .balance-container {
-    background-color: #EAEAEA;
+    background-color: $background-light;
     padding: 10px;
     margin-top: 100px;
     text-align: center;
