--- a/app/tabs/tabs.component.android.scss
+++ b/app/tabs/tabs.component.android.scss
@@ -2,7 +2,7 @@
 
 // Place any CSS rules you want to apply only on Android here
 TabView {
-    tab-text-color: $background-dark;
+    tab-text-color: $default-text;
     selected-tab-text-color: $background-dark;
     android-selected-tab-text-color: $background-dark;
     android-selected-tab-highlight-color: $background-dark;
