--- a/app/tabs/transactions/transactions.component.scss
+++ b/app/tabs/transactions/transactions.component.scss
@@ -1,20 +1,1 @@
-@import '../app-variables';
-
-.test {
-
-}
-
-.transaction-container {
-    background-color: $background-light;
-}
-
-.actions-ccontainer {
-    margin-top: 0px;
-    margin: 200px;
-    text-align:center;
-}
-
-.action-button {
-    width: 70%;
-    height: 200px;
-}
+@import '../../app-variables';
